controls/C-0056/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "kubescape-c-0056-deny-allow-privilege-escalation"
  labels:
    controlId: "C-0056"
  annotations:
    controlUrl: "https://kubescape.io/docs/controls/c-0056/"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods", "pods/ephemeralcontainers"]
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments","replicasets","daemonsets","statefulsets"]
    - apiGroups:   ["batch"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["jobs","cronjobs"]
  variables:
    - expression: |
        object.kind == 'Pod'
          ? object.spec.containers + (has(object.spec.initContainers) ? object.spec.initContainers : []) + (has(object.spec.ephemeralContainers) ? object.spec.ephemeralContainers : [])
          : object.kind in ['Deployment','ReplicaSet','DaemonSet','StatefulSet','Job']
            ? object.spec.template.spec.containers + (has(object.spec.template.spec.initContainers) ? object.spec.template.spec.initContainers : []) + (has(object.spec.template.spec.ephemeralContainers) ? object.spec.template.spec.ephemeralContainers : [])
            : object.kind == 'CronJob'
              ? object.spec.jobTemplate.spec.template.spec.containers + (has(object.spec.jobTemplate.spec.template.spec.initContainers) ? object.spec.jobTemplate.spec.template.spec.initContainers : []) + (has(object.spec.jobTemplate.spec.template.spec.ephemeralContainers) ? object.spec.jobTemplate.spec.template.spec.ephemeralContainers : [])
              : []
      name: containers
  validations:
    - expression: >
        variables.containers.all(container,
          has(container.securityContext) &&
          has(container.securityContext.allowPrivilegeEscalation) &&
          !container.securityContext.allowPrivilegeEscalation &&
          !(has(container.securityContext.privileged) && container.securityContext.privileged) &&
          !(has(container.securityContext.capabilities) &&
            has(container.securityContext.capabilities.add) &&
            container.securityContext.capabilities.add.exists(cap, cap == 'SYS_ADMIN'))
        )
      message: >
        object.kind + '/' + object.metadata.name + ' has a container with effective allowPrivilegeEscalation. (see more at https://kubescape.io/docs/controls/c-0056/)'
